<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/group_1"
    >
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="title_1"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_1"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:text="@string/title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvDpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/description"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="textAutoComplete" />


    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginTop="10dp"
        android:id="@+id/etMail"
        style="@style/EditText"
        android:drawableStart="@drawable/bxs_user"
        android:hint="@string/usr_hint"
        android:inputType="textEmailAddress"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPwd"
        style="@style/NoFilterTextInputLayoutStyle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/hintColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPwd"
            style="@style/EditText"
            android:hint="@string/nip_hint"
            android:inputType="textPassword"
            android:imeOptions="flagNoEnterAction"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btOne"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvMsg"
        android:textColor="@color/black"
        android:background="@drawable/button_bg"
        android:text="@string/Label_btn_one"
        android:onClick="@{(v)->clickListener.onClick(v)}"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLnk"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:onClick="@{(v)->clickListener.onClick(v)}"
        android:textSize="20dp"
        android:text="@string/register"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvInf"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:onClick="@{(v)->clickListener.onClick(v)}"
        android:textSize="20dp"
        android:text="@string/Rbr_pwd"
        tools:ignore="MissingConstraints" />

        <LinearLayout style="@style/SwitchContainer"
            android:layout_marginTop="10dp">
            <TextView
                style="@style/TextStyle.RequestEvent"
                android:text="Texto" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swSomething"
                style="@style/SwitchStyle"
                android:checked="true" />
        </LinearLayout>


        <TextView
            android:id="@+id/spHr"
            style="@style/SpinnerStyle"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:hint="Hora" />

    </LinearLayout>
</layout>