<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="title_1"
            type="String" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <include
        android:id="@+id/toolbarMenu"
        layout="@layout/toolbar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/image_1"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/lyTask"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:background="@drawable/ic_bt_menu" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_check"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/mn_chk"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lyTask2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:background="@drawable/ic_bt_menu" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_task"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/mn_ts"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/ly333"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:background="@drawable/ic_bt_menu" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_notification"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/mn_nt"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ly444"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:background="@drawable/ic_bt_menu" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_news"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:text="@string/mn_ntc"/>
        </RelativeLayout>
    </LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_marginTop="20dp"
    android:layout_marginLeft="80dp"
    >
<RelativeLayout
    android:id="@+id/ly5555"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:layout_marginEnd="10dp"
    android:onClick="@{(v)->clickListener.onClick(v)}"
    android:background="@drawable/ic_bt_menu" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/mn_pfl"/>
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
</layout>
