<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="title_1"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/img_viewer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:translationZ="-10dp"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:id="@+id/btn_camera"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintStart_toStartOf="@+id/img_viewer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_viewer"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="30dp"
                android:translationZ="10dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


            </LinearLayout>
        </LinearLayout>



        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/etName"
            style="@style/EditText"
            android:drawableStart="@drawable/bxs_user"
            android:hint="@string/usr_hint"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/etMail"
            style="@style/EditText"
            android:drawableStart="@drawable/bxs_user"
            android:hint="@string/usr_hint"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPwd"
            style="@style/NoFilterTextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hintColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPwd"
                style="@style/EditText"
                android:hint="@string/nip_hint"
                android:inputType="textPassword"
                android:imeOptions="flagNoEnterAction"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRePwd"
            style="@style/NoFilterTextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hintColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRePwd"
                style="@style/EditText"
                android:hint="@string/nip_hint"
                android:inputType="textPassword"
                android:imeOptions="flagNoEnterAction"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add" />

    </LinearLayout>
</layout>