<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RemindActivity">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="title"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="title2"
            type="String" />
        <variable
            name="title3"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarRemind"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_task_red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{title}"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{description}"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/tabler_urgent"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/tvDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorGray"
                    android:text="@{title2}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_outline_watch_later"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:id="@+id/tvDescription3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorGray"
                    android:text="@{title3}"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMsg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Label_text_rbk1"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvMsg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Label_text_rbk2"
                android:textColor="@color/black"
                android:textSize="20dp"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/spHr"
                style="@style/SpinnerStyle"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:hint="Hora" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="text|textMultiLine"
                android:hint="Mensaje"
                android:layout_marginTop="20dp"
                android:gravity="top"/>

            <Button
                android:id="@+id/btOne"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvMsg"
                android:layout_marginTop="20dp"

                android:background="@drawable/button_blue1"
                android:text="@string/Label_btn_rbk"
                android:textColor="@color/white"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btSec"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvMsg"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_blue2"
                android:text="@string/Label_btn_rbk"
                android:textColor="@color/white"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </LinearLayout>
</layout>